--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,9 +5,9 @@ on:
     branches: [main]
 
 jobs:
-  test:  
     runs-on: ubuntu-latest
 
-    name: Echo text
-    run: echo "Hello, world!"
+    steps:
+    - name: Echo text
+      run: echo "Hello, world!"
     
